# Image_Processing

./: CMakeLists.txt
01/: about.txt
01/00/: CMakeLists.txt  inputImgFile.cpp
01/face_x22004/: 01_01_face_x22004.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
01/inputImageFile/: inputImgFile.cpp
02/: about.txt
02/colors/: 02_02_colors_x22004.cpp
02/imgwaku/: CMakeLists.txt  main.cpp
02/pixelAccess/: inputImgFile.cpp
02/pixelScan/: CMakeLists.txt  main  pixelScan.cpp
02/pixelScan_test/: CMakeLists.txt  pixelScan.cpp
02/チャレンジ課題/: 02_03_rect_x22004.cpp
02/課題/: 02_02_colors_x22004.cpp  CMakeLists.txt
03/: about.txt
03/03_01/: CMakeLists.txt  main.cpp
03/03_02/: CMakeLists.txt  main.cpp
03/grayImg/: CMakeLists.txt  grayImg.cpp
03/negaposi/: CMakeLists.txt  main.cpp
03/posterization/: CMakeLists.txt  main.cpp
04/: about.txt
04/01/: 04_01_bin_x22004.cpp  04_01_x22004.txt  CMakeLists.txt
04/02/: 04_02_x22004.txt  CMakeLists.txt  main.cpp
04/contrast/: CMakeLists.txt  main.cpp
04/hist/: main.cpp
05/: 05_02_denoising_x22004.cpp.disable  about.txt
05/01/: 05_01_filter_x22004.cpp  CMakeLists.txt
05/02/: CMakeLists.txt
05/ave_filter/: CMakeLists.txt  main.cpp
05/filter2D/: CMakeLists.txt  main.cpp
05/gaus/: CMakeLists.txt  main.cpp
05/gaussian/: CMakeLists.txt  main.cpp
05/test/: main.cpp
06/: about.txt  フィルタ.xlsx
06/01/: 06_01_GS_x22004.cpp  CMakeLists.txt
06/02/: CMakeLists.txt  main.cpp
06/filter2D_2/: main.cpp
06/sobel/: CMakeLists.txt  main.cpp
07/: about.txt
07/01/: 07_x22004_grayscale.cpp  CMakeLists.txt
07/alpha/: CMakeLists.txt  main.cpp
07/grayscaleSub/: CMakeLists.txt  main.cpp
07/median/: CMakeLists.txt  main.cpp
08/: about.txt
08/01/: 08_01_drug_x22004.cpp  CMakeLists.txt  test.cpp
08/02/: 08_02_drug2_x22004.cpp  CMakeLists.txt
08/fixTH2/: CMakeLists.txt  main.cpp
08/fixTh/: CMakeLists.txt  main.cpp
08/otsu/: CMakeLists.txt  main.cpp
09/: about.txt
09/01/: 09_01_contours_x22004.cpp  CMakeLists.txt
09/02/: 09_02_ellipse_x22004.cpp  CMakeLists.txt
09/contour/: CMakeLists.txt  main.cpp
09/contour2/: CMakeLists.txt  main.cpp
10/: about.txt
10/morphology/: CMakeLists.txt  main.cpp
11/: about.txt
11/02/: 11_02_fruit_x22004.cpp  CMakeLists.txt
11/changeColor/: CMakeLists.txt  main.cpp
11/extractRegion/: CMakeLists.txt  main.cpp
12/: about.txt
12/template_02/: CMakeLists.txt  main.cpp
13/: 14_01_x22004.cpp  CMakeLists.txt  about.txt
14/: about.txt
(+30 files in other folders)
