cmake_minimum_required(VERSION 3.0 FATAL_ERROR)

set (CMAKE_CXX_STANDARD 11)
project(ave_filter)

find_package(OpenCV 4.5.1 REQUIRED)

include_directories(${OpenCV_INCLUDE_DIRS})
file(GLOB SOURCES *.cpp)

add_executable (ave_filter ${SOURCES})
target_link_libraries (ave_filter
	PRIVATE ${OpenCV_LIBS}
)